add traefik as reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,34 @@
 version: "3.9"
 services:
   db:
-    image: postgres:latest
-    env_file:
-      - env/postgres.env
+    image: postgres:15
+    env_file: .env
     volumes:
-      - postgres-data:/var/lib/postgresql/data/
+      - "postgres-data:/var/lib/postgresql/data/"
 
   web:
     build: .
+    env_file: .env
     depends_on:
       - db
-    env_file:
-      - env/postgres.env
-      - env/django.env
     volumes:
-      - static-data:/var/website/static
-      - ./website:/usr/src/website
+      - "static-data:/var/website/static"
+      - "./website:/usr/src/website"
     links:
-      - db:database
+      - "db:database"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.rule=PathPrefix(`/`)"
 
-  nginx:
-    image: nginx:latest
-    depends_on:
-      - web
-    env_file:
-      - env/nginx.env
+  reverse-proxy:
+    image: traefik:v2.9
+    env_file: .env
     ports:
       - "80:80"
+      - "8080:8080"
     volumes:
-      - static-data:/var/website/static:ro
-      - ./config/nginx:/etc/nginx/conf.d
-    links:
-      - web:web
+      - "static-data:/var/website/static:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
 volumes:
   postgres-data:
