security middleware settings

--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ DJANGO_ALLOWED_HOSTS=127.0.0.1, localhost
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SESSION_COOKIE_SECURE=false
+DJANGO_CSRF_COOKIE_SECURE=false
+DJANGO_SECURE_SSL_REDIRECT=false
+# DJANGO_SECRET_KEY=
 
 TRAEFIK_PROVIDERS_DOCKER=true
 TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT=false
