--- a/.env
+++ b/.env
@@ -1,18 +1,38 @@
+# Environment variables for configuring PostgreSQL.
 POSTGRES_USER=django_user
 POSTGRES_PASSWORD=django_user_password
 POSTGRES_DB=django_db
+# The link contains a complete list of environment variables used to configure Postgresql.
+# https://hub.docker.com/_/postgres
 
+
+# Environment variables for configuring Django.
+# DJANGO_SECRET_KEY=
 DJANGO_DEBUG=false
 DJANGO_ALLOWED_HOSTS=127.0.0.1, localhost
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=admin
-DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_LANGUAGE_CODE=en-us
+DJANGO_TIME_ZONE=UTC
 DJANGO_SESSION_COOKIE_SECURE=false
 DJANGO_CSRF_COOKIE_SECURE=false
 DJANGO_SECURE_SSL_REDIRECT=false
-# DJANGO_SECRET_KEY=
+DJANGO_EMAIL_HOST=localhost
+DJANGO_EMAIL_PORT=25
+DJANGO_EMAIL_HOST_USER=
+DJANGO_EMAIL_HOST_PASSWORD=
+DJANGO_EMAIL_USE_TLS=false
+DJANGO_SERVER_EMAIL=root@localhost
+DJANGO_DEFAULT_FROM_EMAIL=webmaster@localhost
+DJANGO_ADMIN_NAME=
+DJANGO_ADMIN_EMAIL=
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
 
+
+# Environment variables for configuring Traefik.
 TRAEFIK_PROVIDERS_DOCKER=true
 TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT=false
 TRAEFIK_API_DASHBOARD=true
 TRAEFIK_API_INSECURE=true
+# The link contains a complete list of environment variables used to configure Traefik.
+# https://doc.traefik.io/traefik/reference/static-configuration/env/
