add development mode

--- a/.env
+++ b/.env
@@ -1,15 +1,11 @@
-# Environment variables for configuring PostgreSQL.
 POSTGRES_USER=django_user
 POSTGRES_PASSWORD=django_user_password
 POSTGRES_DB=django_db
-# The link contains a complete list of environment variables used to configure Postgresql.
-# https://hub.docker.com/_/postgres
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
-
-# Environment variables for configuring Django.
 # DJANGO_SECRET_KEY=
 DJANGO_DEBUG=false
-DJANGO_ALLOWED_HOSTS=127.0.0.1, localhost
 DJANGO_LANGUAGE_CODE=en-us
 DJANGO_TIME_ZONE=UTC
 DJANGO_SESSION_COOKIE_SECURE=false
@@ -27,12 +23,3 @@ DJANGO_ADMIN_EMAIL=
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
-
-
-# Environment variables for configuring Traefik.
-TRAEFIK_PROVIDERS_DOCKER=true
-TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT=false
-TRAEFIK_API_DASHBOARD=true
-TRAEFIK_API_INSECURE=true
-# The link contains a complete list of environment variables used to configure Traefik.
-# https://doc.traefik.io/traefik/reference/static-configuration/env/
