--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ POSTGRES_PORT=5432
 
 # DJANGO_SECRET_KEY=
 DJANGO_DEBUG=false
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 DJANGO_LANGUAGE_CODE=en-us
 DJANGO_TIME_ZONE=UTC
 DJANGO_SESSION_COOKIE_SECURE=false
