add MEDIA support in production mode, remove WhiteNoise

--- a/docker-compose.tls.yml
+++ b/docker-compose.tls.yml
@@ -10,3 +10,4 @@ services:
       - "traefik.http.routers.production.rule=Host(`${MY_DOMAIN}`)"
       - "traefik.http.routers.production.entrypoints=websecure"
       - "traefik.http.routers.production.tls.certresolver=le-resolver"
+      - "traefik.http.routers.production.priority=1"
