--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,41 @@ services:
     image: django-docker
     env_file: .env
     restart: unless-stopped
+    volumes:
+      - "staticfiles-data:/var/www/static"
+      - "media-data:/var/www/media"
     depends_on:
       - postgres
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.development.rule=Host(`127.0.0.1`) || Host(`localhost`)"
       - "traefik.http.routers.development.entrypoints=web"
+      - "traefik.http.routers.development.priority=1"
+
+  nginx:
+    image: nginx:1.23-alpine
+    env_file: .env
+    restart: unless-stopped
+    volumes:
+      - type: volume
+        source: media-data
+        target: /usr/share/nginx/html/media
+        read_only: true
+        volume:
+          nocopy: true
+      - type: volume
+        source: staticfiles-data
+        target: /usr/share/nginx/html/static
+        read_only: true
+        volume:
+          nocopy: true
+    depends_on:
+      - django
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.staticfiles.rule=PathPrefix(`/static/`) || PathPrefix(`/media/`)"
+      - "traefik.http.routers.staticfiles.entrypoints=web"
+      - "traefik.http.routers.staticfiles.priority=2"
 
   reverse-proxy:
     image: traefik:v2.9
@@ -44,3 +73,5 @@ services:
 
 volumes:
   postgres-data:
+  staticfiles-data:
+  media-data:
