gunicorn settings can be configured in env; superuser is created automatically in debug mode

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ POSTGRES_DB=django_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
+GUNICORN_WORKERS=2
+# the value is in seconds
+GUNICORN_TIMEOUT=60
+GUNICORN_LOG_LEVEL=error
+
 # DJANGO_SECRET_KEY=
 DJANGO_DEBUG=false
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
