--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - "DJANGO_DEBUG=true"
     restart: unless-stopped
-    command: ["/run-server.sh", "sh", "-c", "su-exec user python manage.py runserver 0.0.0.0:8000"]
+    command: ["sh", "-c", "su-exec user python manage.py runserver 0.0.0.0:8000"]
     volumes:
       - "media-data:/var/www/media"
       - "./website:/usr/src/website"  # mount the source code
