--- a/docker-compose.tls.yml
+++ b/docker-compose.tls.yml
@@ -6,6 +6,7 @@ services:
       - "DJANGO_CSRF_TRUSTED_ORIGINS=https://${MY_DOMAIN}"
       - "DJANGO_SESSION_COOKIE_SECURE=true"
       - "DJANGO_CSRF_COOKIE_SECURE=true"
+      - "DJANGO_SECURE_SSL_REDIRECT=true"
     labels:
       - "traefik.http.routers.production.rule=Host(`${MY_DOMAIN}`)"
       - "traefik.http.routers.production.entrypoints=websecure"
