--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run code linter
-        run: |
-          pip install pylint
-          pylint --exit-zero website/*
-
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
@@ -32,4 +27,4 @@ jobs:
       - name: Test and submit coverage report
         run: |
           docker build -t django-docker-template:master .
-          docker run -it --rm django-docker-template:master ./pytest.sh
+          docker run --rm django-docker-template:master ./pytest.sh
