fix: use exec to correctly handle signals in docker-cmd.sh
The commit updates the docker-cmd.sh script to use `exec` when running the Django development server and Gunicorn. This ensures that signals are properly forwarded to the child processes, allowing for graceful shutdowns and restarts.

Additionally, the commit makes the environment variable handling in settings.py more robust by providing default values if the environment variables are not set. This prevents potential errors when the environment variables `DJANGO_SQLITE_DIR`, `DJANGO_MEDIA_ROOT`, and `DJANGO_STATIC_ROOT` are not provided.

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ POSTGRES_PORT=5432
 GUNICORN_WORKERS=2
 # the value is in seconds
 GUNICORN_TIMEOUT=60
-GUNICORN_LOG_LEVEL=error
+GUNICORN_LOG_LEVEL=info
 
 # DJANGO_SECRET_KEY=
 DJANGO_DEBUG=false
