feat: add Caddy server support and configuration
- Create a Caddyfile to serve static and media files and to forward requests to Django
- Update README.md with instructions for using Caddy as an alternative to Traefik
- Add docker-compose.caddy.yml for easy setup with Caddy, Django, and Postgres

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ POSTGRES_DB=django_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
+GUNICORN_PORT=8000
 GUNICORN_WORKERS=2
-# the value is in seconds
-GUNICORN_TIMEOUT=60
+GUNICORN_TIMEOUT=60  # the value is in seconds
 GUNICORN_LOG_LEVEL=info
 
 # DJANGO_SECRET_KEY=
