Edit .env file to fix docker deployment fail
This comment fails the deployment of the stack, removing it fixes the issue.

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ POSTGRES_PORT=5432
 
 GUNICORN_PORT=8000
 GUNICORN_WORKERS=2
-GUNICORN_TIMEOUT=60  # the value is in seconds
+GUNICORN_TIMEOUT=60
 GUNICORN_LOG_LEVEL=info
 
 # DJANGO_SECRET_KEY=
